Add Arrow-related JVM config